intervalsets-macros/tests/ui/crossed_bounds_int.stderr
error: interval bounds are crossed: 10 > 0
 --> tests/ui/crossed_bounds_int.rs:4:23
  |
4 |     let _ = interval!("[10, 0]");
  |                       ^^^^^^^^^
